--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,17 @@ hs_err_pid*
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
 ### OSX ###
 .DS_Store
 .AppleDouble
